--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<!--Website portfolio-->
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Company XYZ</title>
 </head>
-
 <body>
-  <center><h1>Company XYZ</h1></center>
+  <center><img src="assets/images/company_logo.png" alt="Company Logo"></center>
+  <center><i><h2>Professional. Reliable. Trustworthy.</h2></i></center>
+  <hr>
+  <h2><a href="public/services.html">Our Services</a></h2>
+  <a href="public/services.html"><img src="assets/images/stockimage2.webp" alt="services stock image. Credit: pixabay.com" style="width:30%;" title="Image credit: pixabay.com"></a>
+  <br>
+  <h2><a href="public/resources.html">Resources</a></h2>
+  <a href="public/resources.html"><img src="assets/images/stockimage3.jpg" alt="services stock image. Credit: pixabay.com" style="width:30%;" title="Image credit: pixabay.com"></a>
+  <br>
+  <br>
+  <br>
+  <a href="public/about.html">About Us</a>
+  <br>
+  <a href="public/contact.html">Contact Us</a>
+
 </body>
 </html>
+
